updet commit about about.css commit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <input type="text" placeholder="Поиск">
                     </div>
                     <div class="header-button-text">
-                        <a href="#"><img src="./images/phone2.svg" alt="phone2" width="20" height="20"></a>
+                        <a href="tel:"><img src="./images/phone2.svg" alt="phone2" width="20" height="20"></a>
                         <p>Консультация</p>
                     </div>
                 </div>
@@ -145,7 +145,78 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="container">
+                <div class="partnior-contact-wrapper">
+                    <h2>Наши партнеры</h2>
+                    <div class="partnior-contact">
+                        <img src="./images/perkins.svg" alt="perkins" width="293" height="102">
+                        <img src="./images/spes.svg" alt="spes" width="84" height="73">
+                        <img src="./images/alla.svg" alt="alla" width="119" height="63">
+                        <img src="./images/shanghai.svg" alt="shanghai" width="251" height="58">
+                        <img src="./images/baudouin.svg" alt="baudouin" width="258" height="50">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="from-box-wrapper">
+            <div class="container">
+                <div class="from-box-contact">
+                    <div class="form-box">
+                        <h2>Получите консультацию бесплатно</h2>
+                        <p>Наши специалисты перезвонят вам и дадут подробную информацию</p>
+                        <input type="text" placeholder="Имя">
+                        <input type="tel" placeholder="Номер телефона">
+                        <button class="submit-btn">Отправить</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer-container-wrapper">
+        <div class="container">
+            <div class="footer-container">
+                <div class="footer-button-logo">
+                    <a class="footer-logo" href="/">
+                        <img src="./images/header.svg" alt="header" width="41" height="41">
+                        Generators
+                    </a>
+                </div>
+                <div class="footer-links">
+                    <strong class="footer-strong">Главная</strong>
+                    <ul class="footer-text">
+                        <li class="footer-sub"><a class="text" href="#">Наш каталог</a></li>
+                        <li class="footer-sub"><a class="text" href="#">Наши услуги</a></li>
+                        <li class="footer-sub"><a class="text" href="#">О нас</a></li>
+                        <li class="footer-sub"><a class="text" href="#">Оставить заявку</a></li>
+                        <li class="footer-sub"><a class="text" href="#">Наши партнеры</a></li>
+                        <li class="footer-sub"><a class="text" href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contacts">
+                    <strong class="footer-contacts-strong">Контакты</strong>
+                    <p class="strong-text"><strong class="strong">Адрес</strong></p>
+                    <p class="text-item">Taras Shevchenko st. 34, Tashkent, Mirabad Uzbekistan</p>
+                    <p class="strong-text2"><strong class="strong">Mail</strong></p>
+                    <a class="text-item strong-text2"
+                        href="mailto:powermet.info@gmail.com">mailto:powermet.info@gmail.com
+                    </a><br>
+                    <a class="text-item" href="tel:+998900013989">
+                        +998 90 001 39 89
+                    </a>
+                </div>
+                <div class="footer-form">
+                    <strong class="footer-form-strong">Получите бесплатную консультацию</strong>
+                    <input class="input-field" type="text" placeholder="Имя и номер телефона">
+                    <button class="submit-btn2">Отправить</button>
+                </div>
+            </div>
+            <div class="border-btn"></div>
+            <div class="footer-bottom">
+                <p>© 2029 "YOUR COMPANY" LLC</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
