update header contact

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <div class="header-content">
                         <img class="header-content-img" src="./images/header.svg" alt="header-img" width="41"
                             height="41">
-                        <a class="header-content-text" href="#">Generators</a>
+                        <a class="header-content-text" href="./index.html" target="_blank">Generators</a>
                     </div>
                     <div class="header-content-menu">
                         <a class="header-content-text" href="#">Наша продукция</a>
