--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="header-content-menu">
                         <a class="header-content-text" href="#">Наша продукция</a>
                         <a class="header-content-text" href="#">Наши услуги</a>
-                        <a class="header-content-text" href="#">O нас</a>
+                        <a class="header-content-text" href="./about.html" target="_blank">O нас</a>
                     </div>
                     <div class="header-content-item">
                         <img src="./images/qidiruv.svg" alt="qidiruv" width="22" height="22">
