--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="header-content-text" href="#">Generators</a>
                     </div>
                     <div class="header-content-menu">
-                        <a class="header-content-text" href="#">Наша продукция</a>
+                        <a class="header-content-text" href="./category.html" target="_blank">Наша продукция</a>
                         <a class="header-content-text" href="#">Наши услуги</a>
                         <a class="header-content-text" href="./about.html" target="_blank">O нас</a>
                     </div>
