--- a/about.html
+++ b/about.html
@@ -10,23 +10,23 @@
 
 <body>
     <header>
-        <div class="container">
-            <div class="top-contact-wrapper">
-                <div class="top-contact-number">
+        <div class="container top">
+            <div class="top__contact-wrapper">
+                <div class="top__contact-number">
                     <span>24/7</span>
                 </div>
-                <div class="top-contact-contact">
-                    <img class="top-contact-phone" src="./images/phone.svg" alt="phone" width="19" height="19">
-                    <a class="top-contact-tel" href="tel:+998980013666">+998 98 001 36 66</a>
-                    <a class="top-contact-tel-contact" href="#">Контакты</a>
+                <div class="top__contact-contact">
+                    <img class="top__contact-phone" src="./images/phone.svg" alt="phone" width="19" height="19">
+                    <a class="top__contact-tel" href="tel:+998980013666">+998 98 001 36 66</a>
+                    <a class="top__contact-tel-contact" href="#">Контакты</a>
                 </div>
-                <div class="border"></div>
-                <div class="top-contact-translition">
+                <div class="top__border"></div>
+                <div class="top__contact-translition">
                     <img src="./images/yer.svg" alt="yer" width="20" height="20">
-                    <select class="translition">
-                        <option value="ru">RU</option>
-                        <option value="uz">UZ</option>
-                        <option value="eng">ENG</option>
+                    <select class="top__translition">
+                        <option class="top_option" value="ru">RU</option>
+                        <option class="top_option" value="uz">UZ</option>
+                        <option class="top_option" value="eng">ENG</option>
                     </select>
                 </div>
             </div>
@@ -34,23 +34,23 @@
     </header>
     <main>
         <section>
-            <div class="container">
-                <div class="header-content-wrapper">
-                    <div class="header-content">
-                        <img class="header-content-img" src="./images/header.svg" alt="header-img" width="41"
+            <div class="container header">
+                <div class="header__content-wrapper">
+                    <div class="header__content">
+                        <img class="header__content-img" src="./images/header.svg" alt="header-img" width="41"
                             height="41">
-                        <a class="header-content-text" href="./index.html" target="_blank">Generators</a>
+                        <a class="header__content-text" href="./index.html" target="_blank">Generators</a>
                     </div>
-                    <div class="header-content-menu">
-                        <a class="header-content-text" href="./category.html" target="_blank">Наша продукция</a>
-                        <a class="header-content-text" href="#">Наши услуги</a>
-                        <a class="header-content-text" href="#">O нас</a>
+                    <div class="header__content-menu">
+                        <a class="header__content-text" href="./category.html" target="_blank">Наша продукция</a>
+                        <a class="header__content-text" href="#">Наши услуги</a>
+                        <a class="header__content-text" href="#">O нас</a>
                     </div>
-                    <div class="header-content-item">
+                    <div class="header__content-item">
                         <img src="./images/qidiruv.svg" alt="qidiruv" width="22" height="22">
-                        <input type="text" placeholder="Поиск">
+                        <input class="header__content-input" type="text" placeholder="Поиск">
                     </div>
-                    <div class="header-button-text">
+                    <div class="header__button-text">
                         <a href="tel:"><img src="./images/phone2.svg" alt="phone2" width="20" height="20"></a>
                         <p>Консультация</p>
                     </div>
@@ -59,35 +59,39 @@
         </section>
         <section>
             <div class="hero-contact-wrapper">
-                <div class="container">
-                    <div class="hero-contact">
-                        <h2>O нас</h2>
-                        <p>Наша кампания предоставляет такие услуги как продажа и монтаж генераторов в любос
+                <div class="container hero">
+                    <div class="hero__contact">
+                        <h2 class="hero__contact-item">O нас</h2>
+                        <p class="hero__contact-text">Наша кампания предоставляет такие услуги как продажа и монтаж
+                            генераторов в любос
                             ассортименте
                         </p>
-                        <button>Консультация</button>
+                        <button class="hero__contact-button">Консультация</button>
                     </div>
                 </div>
             </div>
         </section>
         <section>
-            <div class="container">
-                <div class="sefer-contact-wrapper">
-                    <h2>Цифры</h2>
-                    <div class="sefer-contact-text">
-                        <div class="sefer-contact-img">
+            <div class="container sefer">
+                <div class="sefer__contact-wrapper">
+                    <h2 class="sefer__contact-item">Цифры</h2>
+                    <div class="sefer__contact-text">
+                        <div class="sefer__contact-img">
                             <img src="./images/5000.svg" alt="5000" width="264" height="59">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc odio in et, lectus sit
+                            <p class="sefer__contact-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                odio in et, lectus sit
                                 lorem id integer.</p>
                         </div>
-                        <div class="sefer-contact-img">
+                        <div class="sefer__contact-img">
                             <img src="./images/14.svg" alt="14" width="109" height="59">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc odio in et, lectus sit
+                            <p class="sefer__contact-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                odio in et, lectus sit
                                 lorem id integer.</p>
                         </div>
-                        <div class="sefer-contact-img">
+                        <div class="sefer__contact-img">
                             <img src="./images/99.svg" alt="99" width="128" height="59">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc odio in et, lectus sit
+                            <p class="sefer__contact-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                odio in et, lectus sit
                                 lorem id integer.</p>
                         </div>
                     </div>
@@ -95,10 +99,10 @@
             </div>
         </section>
         <section>
-            <div class="container">
-                <div class="document-contact-wrapper">
+            <div class="container document">
+                <div class="document__contact-wrapper">
                     <h2>Документация</h2>
-                    <div class="document-contact-img">
+                    <div class="document__contact-img">
                         <img src="./images/about.jpg" alt="dokument" height="292">
                     </div>
                 </div>
@@ -106,45 +110,45 @@
         </section>
     </main>
     <footer class="footer-container-wrapper">
-        <div class="container">
-            <div class="footer-container">
-                <div class="footer-button-logo">
-                    <a class="footer-logo" href="/">
+        <div class="container footer">
+            <div class="footer__container">
+                <div class="footer__button-logo">
+                    <a class="footer__logo" href="/">
                         <img src="./images/header.svg" alt="header" width="41" height="41">
                         Generators
                     </a>
                 </div>
-                <div class="footer-links">
-                    <strong class="footer-strong">Главная</strong>
-                    <ul class="footer-text">
-                        <li class="footer-sub"><a class="text" href="#">Наш каталог</a></li>
-                        <li class="footer-sub"><a class="text" href="#">Наши услуги</a></li>
-                        <li class="footer-sub"><a class="text" href="#">О нас</a></li>
-                        <li class="footer-sub"><a class="text" href="#">Оставить заявку</a></li>
-                        <li class="footer-sub"><a class="text" href="#">Наши партнеры</a></li>
-                        <li class="footer-sub"><a class="text" href="#">Контакты</a></li>
+                <div class="footer__links">
+                    <strong class="footer__strong">Главная</strong>
+                    <ul class="footer__text">
+                        <li class="footer__sub"><a class="footer__sub-text" href="#">Наш каталог</a></li>
+                        <li class="footer__sub"><a class="footer__sub-text" href="#">Наши услуги</a></li>
+                        <li class="footer__sub"><a class="footer__sub-text" href="#">О нас</a></li>
+                        <li class="footer__sub"><a class="footer__sub-text" href="#">Оставить заявку</a></li>
+                        <li class="footer__sub"><a class="footer__sub-text" href="#">Наши партнеры</a></li>
+                        <li class="footer__sub"><a class="footer__sub-text" href="#">Контакты</a></li>
                     </ul>
                 </div>
-                <div class="footer-contacts">
-                    <strong class="footer-contacts-strong">Контакты</strong>
-                    <p class="strong-text"><strong class="strong">Адрес</strong></p>
-                    <p class="text-item">Taras Shevchenko st. 34, Tashkent, Mirabad Uzbekistan</p>
-                    <p class="strong-text2"><strong class="strong">Mail</strong></p>
-                    <a class="text-item strong-text2"
+                <div class="footer__links">
+                    <strong class="footer__contacts-strong">Контакты</strong>
+                    <p class="footer__strong-text"><strong class="footer__strong">Адрес</strong></p>
+                    <p class="footer__text-item">Taras Shevchenko st. 34, Tashkent, Mirabad Uzbekistan</p>
+                    <p class="footer__strong-text2"><strong class="footer__strong">Mail</strong></p>
+                    <a class="footer__text-item footer__strong-text2"
                         href="mailto:powermet.info@gmail.com">mailto:powermet.info@gmail.com
                     </a><br>
-                    <a class="text-item" href="tel:+998900013989">
+                    <a class="footer__text-item" href="tel:+998900013989">
                         +998 90 001 39 89
                     </a>
                 </div>
-                <div class="footer-form">
-                    <strong class="footer-form-strong">Получите бесплатную консультацию</strong>
-                    <input class="input-field" type="text" placeholder="Имя и номер телефона">
-                    <button class="submit-btn2">Отправить</button>
+                <div class="footer__form">
+                    <strong class="footer__form-strong">Получите бесплатную консультацию</strong>
+                    <input class="footer__input-field" type="text" placeholder="Имя и номер телефона">
+                    <button class="footer__submit-btn2">Отправить</button>
                 </div>
             </div>
-            <div class="border-btn"></div>
-            <div class="footer-bottom">
+            <div class="footer__border-btn"></div>
+            <div class="footer__bottom">
                 <p>© 2029 "YOUR COMPANY" LLC</p>
             </div>
         </div>
