--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="header__content-menu">
                         <a class="header__content-text" href="./category.html" target="_blank">Наша продукция</a>
-                        <a class="header__content-text" href="#">Наши услуги</a>
+                        <a class="header__content-text" href="./service.html" target="_blank">Наши услуги</a>
                         <a class="header__content-text" href="#">O нас</a>
                     </div>
                     <div class="header__content-item">
