--- a/category.html
+++ b/category.html
@@ -42,8 +42,8 @@
                         <a class="header__content-text" href="./index.html" target="_blank">Generators</a>
                     </div>
                     <div class="header__content-menu">
-                        <a class="header__content-text" href="#">Наша продукция</a>
-                        <a class="header__content-text" href="#">Наши услуги</a>
+                        <a class="header__content-text" href="./category.html" target="_blank">Наша продукция</a>
+                        <a class="header__content-text" href="./service.html" target="_blank">Наши услуги</a>
                         <a class="header__content-text" href="./about.html" target="_blank">O нас</a>
                     </div>
                     <div class="header__content-item">
