--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="header-content__menu">
                         <a class="header-content__text" href="./category.html" target="_blank">Наша продукция</a>
-                        <a class="header-content__text" href="#">Наши услуги</a>
+                        <a class="header-content__text" href="./service.html" target="_blank">Наши услуги</a>
                         <a class="header-content__text" href="./about.html" target="_blank">O нас</a>
                     </div>
                     <div class="header-content__item">
